force-app/main/default/objects/Scope__c/Scope__c.object-meta.xml
<CustomObject>
    <description>Created by: YB</description>
    <label>Scope</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Scope  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scopes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>