force-app/main/default/objects/Scope__c/fields/Assignee__c.field-meta.xml
<CustomField>
    <fullName>Assignee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created by AF. Looks up to the SE User in charge of this Scope.</description>
    <inlineHelpText>The SE User in charge of this Scope.</inlineHelpText>
    <label>Assignee</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>S3 Solutions  Engineer User</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Scopes</relationshipName>
    <type>Lookup</type>
</CustomField>