force-app/main/default/objects/Scope__c/fields/BWTC_Designer_Rate_Hourly__c.field-meta.xml
<CustomField>
    <fullName>BWTC_Designer_Rate_Hourly__c</fullName>
    <defaultValue>150</defaultValue>
    <description>Created by YB/JA
S3 Users
To track hourly charges for dev work</description>
    <label>BWTC Designer Rate (Hourly)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>