force-app/main/default/objects/Scope__c/fields/BWTC_Project_Manager_Rate_Hourly__c.field-meta.xml
<CustomField>
    <fullName>BWTC_Project_Manager_Rate_Hourly__c</fullName>
    <defaultValue>115</defaultValue>
    <description>Created by YB/JA
S3 Users
To track hourly charges for project manager work</description>
    <label>BWTC Project Manager Rate (Hourly)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>