force-app/main/default/objects/Scope__c/fields/BWTC_Quality_Assurance_Rate_Hourly__c.field-meta.xml
<CustomField>
    <fullName>BWTC_Quality_Assurance_Rate_Hourly__c</fullName>
    <description>Created by YB/JA
S3 Users
To track hourly charges for QA work</description>
    <label>BWTC Quality Assurance Rate (Hourly)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>