force-app/main/default/objects/Scope__c/fields/BWTC_Technical_Lead_Rate_Hourly__c.field-meta.xml
<CustomField>
    <fullName>BWTC_Technical_Lead_Rate_Hourly__c</fullName>
    <defaultValue>185</defaultValue>
    <description>Created by YB
S3 Users
To track hourly charges for technical lead work</description>
    <label>BWTC Technical Lead Rate (Hourly)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>