force-app/main/default/objects/Scope__c/fields/BWTC_Training_Rate_Hourly__c.field-meta.xml
<CustomField>
    <fullName>BWTC_Training_Rate_Hourly__c</fullName>
    <defaultValue>100</defaultValue>
    <description>Created by YB
S3 Users
To track hourly charges for training work</description>
    <label>BWTC Training Rate (Hourly)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>