force-app/main/default/objects/Scope__c/fields/Design_Billable__c.field-meta.xml
<CustomField>
    <fullName>Design_Billable__c</fullName>
    <formula>Design_Estimate__c * BWTC_Designer_Rate_Hourly__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Design Billable</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>