force-app/main/default/objects/Scope__c/fields/Developer_Billable__c.field-meta.xml
<CustomField>
    <fullName>Developer_Billable__c</fullName>
    <formula>Developer_Estimate_Hrs__c * BWTC_Developer_Rate_Hourly__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Developer Billable</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>