force-app/main/default/objects/Scope__c/fields/Developer_Estimate_Hrs__c.field-meta.xml
<CustomField>
    <fullName>Developer_Estimate_Hrs__c</fullName>
    <formula>Sum_of_Feature_Sets_Hrs__c +  DevOps_Estimate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Developer Estimate (Hrs)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>