force-app/main/default/objects/Scope__c/fields/DevOps_Estimate__c.field-meta.xml
<CustomField>
    <fullName>DevOps_Estimate__c</fullName>
    <label>DevOps Estimate (Hrs)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>