force-app/main/default/objects/Scope__c/fields/Form_Factor__c.field-meta.xml
<CustomField>
    <fullName>Form_Factor__c</fullName>
    <label>Form Factor</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Web App</fullName>
            </value>
            <value>
                <fullName>Mobile App</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Assessment</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Wordpress</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>