force-app/main/default/objects/Scope__c/fields/Hosting_Service__c.field-meta.xml
<CustomField>
    <fullName>Hosting_Service__c</fullName>
    <label>Hosting Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Hosting_Service</valueSetName>
    </valueSet>
</CustomField>