force-app/main/default/objects/Scope__c/fields/Migration_Billable__c.field-meta.xml
<CustomField>
    <fullName>Migration_Billable__c</fullName>
    <formula>Migration_Estimate_Hrs__c * BWTC_Migration_Rate_Hourly__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Migration Billable</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>