force-app/main/default/objects/Scope__c/fields/Migration_Estimate_Hrs__c.field-meta.xml
<CustomField>
    <fullName>Migration_Estimate_Hrs__c</fullName>
    <label>Migration Estimate (Hrs)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>