force-app/main/default/objects/Scope__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created By:CMP Business Unit:BWTC Purpose:To place the related list on the Project record</description>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Scopes</relationshipLabel>
    <relationshipName>Scopes</relationshipName>
    <type>Lookup</type>
</CustomField>