force-app/main/default/objects/Scope__c/fields/Project_Manager_Billable__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager_Billable__c</fullName>
    <formula>Project_Manager_Estimate_Hrs__c * BWTC_Project_Manager_Rate_Hourly__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Manager Billable</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>