force-app/main/default/objects/Scope__c/fields/Project_Manager_Estimate_Hrs__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager_Estimate_Hrs__c</fullName>
    <formula>Sum_of_Feature_Sets_Hrs__c * 0.2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Manager Estimate (Hrs)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>