force-app/main/default/objects/Scope__c/fields/QA_Application_Testing_Billable__c.field-meta.xml
<CustomField>
    <fullName>QA_Application_Testing_Billable__c</fullName>
    <formula>QA_Application_Testing_Estimate_Hrs2__c *  BWTC_Quality_Assurance_Rate_Hourly__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QA - Application Testing Billable</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>