force-app/main/default/objects/Scope__c/fields/QA_Application_Testing_Estimate_Hrs2__c.field-meta.xml
<CustomField>
    <fullName>QA_Application_Testing_Estimate_Hrs2__c</fullName>
    <label>QA - Application Testing2 Estimate (Hrs)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>