force-app/main/default/objects/Scope__c/fields/QA_Application_Testing_Estimate_Hrs__c.field-meta.xml
<CustomField>
    <fullName>QA_Application_Testing_Estimate_Hrs__c</fullName>
    <formula>Sum_of_Feature_Sets_Hrs__c * 0.20</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QA - Application Testing Estimate (Hrs)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>