force-app/main/default/objects/Scope__c/fields/QA_Code_Review_Billable__c.field-meta.xml
<CustomField>
    <fullName>QA_Code_Review_Billable__c</fullName>
    <formula>QA_Code_Review_Estimate_Hrs2__c * BWTC_Quality_Assurance_Rate_Hourly__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QA - Code Review Billable</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>