force-app/main/default/objects/Scope__c/fields/QA_Code_Review_Estimate_Hrs2__c.field-meta.xml
<CustomField>
    <fullName>QA_Code_Review_Estimate_Hrs2__c</fullName>
    <label>QA - Code Review Estimate (Hrs)2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>