force-app/main/default/objects/Scope__c/fields/QA_Code_Review_Estimate_Hrs__c.field-meta.xml
<CustomField>
    <fullName>QA_Code_Review_Estimate_Hrs__c</fullName>
    <formula>Sum_of_Feature_Sets_Hrs__c * 0.10</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QA - Code Review Estimate (Hrs)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>