force-app/main/default/objects/Scope__c/fields/Scope_Billable_Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Scope_Billable_Subtotal__c</fullName>
    <formula>Design_Billable__c +  Developer_Billable__c +  Migration_Billable__c +  Project_Manager_Billable__c +  QA_Application_Testing_Billable__c +  QA_Code_Review_Billable__c +  Technical_Lead_Billable__c +  Training_Billable__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scope Billable Subtotal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>