force-app/main/default/objects/Scope__c/fields/Scope_Billable_Total__c.field-meta.xml
<CustomField>
    <fullName>Scope_Billable_Total__c</fullName>
    <formula>Scope_Billable_Subtotal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scope Billable Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>