force-app/main/default/objects/Scope__c/fields/Scope_Executive_Summary__c.field-meta.xml
<CustomField>
    <fullName>Scope_Executive_Summary__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Scope Executive Summary</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>