force-app/main/default/objects/Scope__c/fields/Scope_Number__c.field-meta.xml
<CustomField>
    <fullName>Scope_Number__c</fullName>
    <displayFormat>SOW-{00000}</displayFormat>
    <label>Scope Number</label>
    <type>AutoNumber</type>
</CustomField>