force-app/main/default/objects/Scope__c/fields/SFDC_Administrator_Rate_Hourly__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Administrator_Rate_Hourly__c</fullName>
    <defaultValue>165</defaultValue>
    <description>Created by YB
S3 Users
To track hourly charges for dev work</description>
    <label>SFDC Administrator Rate (Hourly)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>