force-app/main/default/objects/Scope__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <defaultValue>&apos;In Queue&apos;</defaultValue>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Queue</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Solutions Engineer Review</fullName>
            </value>
            <value>
                <fullName>Senior Engineer Review</fullName>
            </value>
            <value>
                <fullName>Final Internal Review</fullName>
            </value>
            <value>
                <fullName>Shipped to Sales</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>