force-app/main/default/objects/Scope__c/fields/Sum_of_Feature_Sets_Hrs__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Feature_Sets_Hrs__c</fullName>
    <description>Created by: DA
Business Unit(s): Shift3 SE
Purpose: Getting SUM of Developer Hours on Feature Sets</description>
    <inlineHelpText>Total of Developer Time (in Hours) from Feature Sets</inlineHelpText>
    <label>Sum of Feature Sets (Hrs)</label>
    <summarizedField>Feature_Sets__c.Estimate_Hrs__c</summarizedField>
    <summaryForeignKey>Feature_Sets__c.Scope__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>