force-app/main/default/objects/Scope__c/fields/Synced_w_Opp__c.field-meta.xml
<CustomField>
    <fullName>Synced_w_Opp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Synced w/Opp</label>
    <type>Checkbox</type>
</CustomField>