force-app/main/default/objects/Scope__c/fields/Technical_Lead_Billable__c.field-meta.xml
<CustomField>
    <fullName>Technical_Lead_Billable__c</fullName>
    <formula>Technical_Lead_Estimate_Hrs__c *  BWTC_Technical_Lead_Rate_Hourly__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Technical Lead Billable</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>