force-app/main/default/objects/Scope__c/fields/Technical_Lead_Estimate_Hrs__c.field-meta.xml
<CustomField>
    <fullName>Technical_Lead_Estimate_Hrs__c</fullName>
    <formula>Sum_of_Feature_Sets_Hrs__c * 0.15</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Technical Lead Estimate (Hrs)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>