force-app/main/default/objects/Scope__c/fields/Total_Estimate_Hrs__c.field-meta.xml
<CustomField>
    <fullName>Total_Estimate_Hrs__c</fullName>
    <formula>Developer_Estimate_Hrs__c + Migration_Estimate_Hrs__c +  Project_Manager_Estimate_Hrs__c +  QA_Application_Testing_Estimate_Hrs2__c +  QA_Code_Review_Estimate_Hrs2__c +  Technical_Lead_Estimate_Hrs__c +  Training_Estimate_Hrs__c +  Design_Estimate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Estimate (Hrs)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>