force-app/main/default/objects/Scope__c/fields/Training_Billable__c.field-meta.xml
<CustomField>
    <fullName>Training_Billable__c</fullName>
    <formula>Training_Estimate_Hrs__c * BWTC_Training_Rate_Hourly__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Training Billable</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>