force-app/main/default/objects/Scope__c/fields/Training_Estimate_Hrs__c.field-meta.xml
<CustomField>
    <fullName>Training_Estimate_Hrs__c</fullName>
    <label>Training Estimate (Hrs)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>