force-app/main/default/objects/Scope__c/recordTypes/Fixed_Bid.recordType-meta.xml
<RecordType>
    <fullName>Fixed_Bid</fullName>
    <active>true</active>
    <label>Fixed Bid</label>
</RecordType>