force-app/main/default/objects/Scope__c/recordTypes/T_M.recordType-meta.xml
<RecordType>
    <fullName>T_M</fullName>
    <active>true</active>
    <label>T&amp;M</label>
</RecordType>