force-app/main/default/objects/Scope__c/listViews/All_Scopes.listView-meta.xml
<ListView>
    <fullName>All_Scopes</fullName>
    <columns>NAME</columns>
    <columns>Synced_w_Opp__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATED_DATE</columns>
    <columns>Scope_Billable_Total__c</columns>
    <filterScope>Everything</filterScope>
    <label>Scopes- All</label>
    <sharedTo>
        <group>SF_Admin_Team</group>
    </sharedTo>
</ListView>