force-app/main/default/objects/Scope__c/listViews/Scopes_Active.listView-meta.xml
<ListView>
    <fullName>Scopes_Active</fullName>
    <columns>NAME</columns>
    <columns>Scope_Number__c</columns>
    <columns>Opportunity__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Shipped to Sales,On Hold</value>
    </filters>
    <label>Scopes - Active</label>
    <sharedTo>
        <group>SF_Admin_Team</group>
    </sharedTo>
</ListView>